--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,11 +9,70 @@
     tools:context=".MainActivity" >
 
     <TextView
+        android:id="@+id/howManyLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="96dp"
-        android:text="How much?" />
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:text="How many?" />
+
+    <NumberPicker
+        android:id="@+id/numberPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/howManyLabel"
+        android:layout_centerHorizontal="true" />
+    
+    <TextView
+        android:id="@+id/ofWhatLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/numberPicker"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        android:text="Of what?" />
+
+    <EditText
+        android:id="@+id/contentBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ofWhatLabel"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:imeOptions="actionDone"
+        android:inputType="text"
+        android:text="P" />
+
+    <EditText
+        android:id="@+id/recipientBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toWhoLabel"
+        android:layout_centerHorizontal="true"
+        android:imeOptions="actionDone"
+        android:ems="10"
+        android:inputType="phone" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/sendButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="22dp"
+        android:text="Send" />
+
+    <TextView
+        android:id="@+id/toWhoLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/contentBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp"
+        android:text="To who?" />
 
 </RelativeLayout>
